Bug 490861 - Replace new Integer() with Integer.valueOf() in rest of org.eclipse.swt repo
This one is for tools

Change-Id: I63f76c054ed09fb8c8c76fdad174f93788f8ccbd
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>